--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/abb.png" alt="img"/></figure>
+                              <figure><img src="images/p1.png" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box ">
-                              <figure><img src="images/CG.png" alt="img"/></figure>
+                              <figure><img src="images/p4.png" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
@@ -135,7 +135,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/seimens.png" alt="img"/></figure>
+                              <figure><img src="images/p5.png" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
