--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                               <ul class="menu-area-main">
                                  <li> <a href="index.html">Home</a> </li>
                                  <li> <a href="about.html">About Us</a> </li>
-                                 <li><a href="clients.html">Products</a></li>
+                                 <li><a href="#plant">Products</a></li>
                                  <li><a href="contact.html">Contact Us</a></li>
                                  <!-- <li class="last"><a href="#"><img src="images/search_icon.png" alt="icon"/></a></li> -->
                               </ul>
@@ -430,7 +430,7 @@
                         <ul>
                            <li class="active"><a href="#">Home</a></li>
                            <li><a href="about.html">About</a></li>
-                           <li><a href="clients.html">Products</a></li>
+                           <li><a href="#plant">Products</a></li>
                            <li><a href="contact.html">Contact Us</a></li>
                         </ul>
                      </div>
