--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
                   <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                      <div class="full">
                         <div class="center-desk">
-                           <div class="logo"> <a href="index.html"><img src="images/logo.png" alt="#"></a> </div>
+                           <div class="logo"> <a href="index.html">
+                             <img src="images/logo.png" alt="#"></a> </div>
                         </div>
                      </div>
                   </div>
@@ -95,7 +96,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/p1.png" alt="img"/></figure>
+                              <figure><img style="margin:120px 0px;" src="images/p1.png" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
@@ -115,7 +116,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box ">
-                              <figure><img src="images/p4.png" alt="img"/></figure>
+                              <figure><img style="margin:120px 0px;" src="images/p4.png" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
@@ -135,7 +136,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/p5.png" alt="img"/></figure>
+                              <figure><img style="margin:120px 0px;" src="images/p5.png" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
